iamges are added.

--- a/blogapp/blog/templates/blog/partials/_blog.html
+++ b/blogapp/blog/templates/blog/partials/_blog.html
@@ -1,13 +1,13 @@
-{% load static %}
 <div class="card mb-3">
   <div class="row g-0">
     <div class="col-md-3">
-      <img src="{%static 'img/'|add:blog.image%}" class="img-fluid rounded-start" alt="..." />
+      <!-- <img src="{ # % static 'img/'|add:blog.image %}" class="img-fluid rounded-start" alt="..." /> -->
+      <img src="{{ blog.image.url }}" class="img-fluid rounded-start" alt="..." />
     </div>
     <div class="col-md-9">
       <div class="card-body">
         <h5 class="card-title">
-          <a href="{% url 'blog_details' blog.slug%} ">{{blog.title}}</a>
+          <a href="{% url 'blog_details' blog.slug %} ">{{blog.title}}</a>
         </h5>
         <p class="card-text">{{blog.description}}</p>
         <p class="card-text">
