--- a/blogapp/blog/templates/blog/blog-details.html
+++ b/blogapp/blog/templates/blog/blog-details.html
@@ -15,7 +15,7 @@
         <div class="card mb-3">
           <div class="row g-0">
             <div class="col-md-3">
-              <img src="{% static 'img/'|add:blog.image %}" class="img-fluid rounded-start" alt="..." />
+              <img src="{{ blog.image.url }}" class="img-fluid rounded-start" alt="..." />
             </div>
             <div class="col-md-9">
               <div class="card-body">
