--- a/blogapp/blog/templates/blog/blog-details.html
+++ b/blogapp/blog/templates/blog/blog-details.html
@@ -8,10 +8,7 @@
 
   <div class="container mt-3">
     <div class="row">
-      <div class="col-3">
-        {% include 'partials/_categories.html' %}
-      </div>
-      <div class="col-9">
+      <div class="col-12">
         <div class="card mb-3">
           <div class="row g-0">
             <div class="col-md-3">
@@ -20,7 +17,7 @@
             <div class="col-md-9">
               <div class="card-body">
                 <h5 class="card-title">{{ blog.title }}</h5>
-                <p class="card-text">{{ blog.description }}</p>
+                <p class="card-text">{{ blog.description|safe }}</p>
               </div>
             </div>
           </div>
