--- a/blogapp/blog/templates/blog/partials/_blog.html
+++ b/blogapp/blog/templates/blog/partials/_blog.html
@@ -9,7 +9,7 @@
         <h5 class="card-title">
           <a href="{% url 'blog_details' blog.slug %} ">{{blog.title}}</a>
         </h5>
-        <p class="card-text">{{blog.description}}</p>
+        <p class="card-text">{{ blog.description|slice:"0:50"|striptags }}</p>
         <p class="card-text">
           <small class="text-body-secondary">Last updated 3 mins ago</small>
         </p>
