--- a/blogapp/templates/partials/_categories.html
+++ b/blogapp/templates/partials/_categories.html
@@ -1,5 +1,5 @@
 <div class="list-group">
   {% for category in categories %}
-    <a href="{% url 'blogs_by_category' category.slug %}" class="list-group-item list-group-item-action {{ category.is_active }}" aria-current="true">{{ category.name|title }}</a>
+    <a href="{% url 'blogs_by_category' category.slug %}" class="list-group-item list-group-item-action {% if category.slug == selected_category %} active {% endif %}" aria-current="true">{{ category.name|title }}</a>
   {% endfor %}
 </div>
