--- a/blogapp/templates/partials/_navbar.html
+++ b/blogapp/templates/partials/_navbar.html
@@ -1,9 +1,30 @@
 <nav class="navbar navbar-dark bg-primary navbar-expand-lg">
   <div class="container">
-    <a href="{% url 'home'%}" class="navbar-brand">BlogApp</a>
+    <a href="{% url 'home' %}" class="navbar-brand">BlogApp</a>
     <ul class="navbar-nav me-auto">
-      <li class="nav-item"><a href="{% url 'home'%}" class="nav-link">Home</a></li>
-      <li class="nav-item"><a href="{% url 'blogs'%}" class="nav-link">Blogs</a></li>
+      <li class="nav-item">
+        <a href="{% url 'home' %}" class="nav-link">Home</a>
+      </li>
+      <li class="nav-item">
+        <a href="{% url 'blogs' %}" class="nav-link">Blogs</a>
+      </li>
+    </ul>
+    <ul class="navbar-nav ms-auto">
+      {% if user.is_authenticated %}
+        <li class="nav-item">
+          <a href="{% url 'home' %}" class="nav-link">Welcome</a>
+        </li>
+        <li class="nav-item">
+          <a href="{% url 'blogs' %}" class="nav-link">Logout</a>
+        </li>
+      {% else %}
+        <li class="nav-item">
+          <a href="{% url 'home' %}" class="nav-link">Login</a>
+        </li>
+        <li class="nav-item">
+          <a href="{% url 'blogs' %}" class="nav-link">Register</a>
+        </li>
+      {% endif %}
     </ul>
   </div>
 </nav>
