--- a/blogapp/templates/partials/_navbar.html
+++ b/blogapp/templates/partials/_navbar.html
@@ -1,30 +1,33 @@
 <nav class="navbar navbar-dark bg-primary navbar-expand-lg">
   <div class="container">
     <a href="{% url 'home' %}" class="navbar-brand">BlogApp</a>
-    <ul class="navbar-nav me-auto">
-      <li class="nav-item">
-        <a href="{% url 'home' %}" class="nav-link">Home</a>
-      </li>
-      <li class="nav-item">
-        <a href="{% url 'blogs' %}" class="nav-link">Blogs</a>
-      </li>
-    </ul>
-    <ul class="navbar-nav ms-auto">
-      {% if user.is_authenticated %}
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav me-auto">
         <li class="nav-item">
-          <a href="#}" class="nav-link">Welcome, {{ user.get_full_name|title }}</a>
+          <a href="{% url 'home' %}" class="nav-link">Home</a>
         </li>
         <li class="nav-item">
-          <a href="{% url 'logout' %}" class="nav-link">Logout</a>
+          <a href="{% url 'blogs' %}" class="nav-link">Blogs</a>
         </li>
-      {% else %}
-        <li class="nav-item">
-          <a href="{% url 'login' %}" class="nav-link">Login</a>
-        </li>
-        <li class="nav-item">
-          <a href="{% url 'register' %}" class="nav-link">Register</a>
-        </li>
-      {% endif %}
-    </ul>
+      </ul>
+      <ul class="navbar-nav ms-auto">
+        {% if user.is_authenticated %}
+          <li class="nav-item">
+            <a href="#}" class="nav-link">Welcome, {{ user.get_full_name|title }}</a>
+          </li>
+          <li class="nav-item">
+            <a href="{% url 'logout' %}" class="nav-link">Logout</a>
+          </li>
+        {% else %}
+          <li class="nav-item">
+            <a href="{% url 'login' %}" class="nav-link">Login</a>
+          </li>
+          <li class="nav-item">
+            <a href="{% url 'register' %}" class="nav-link">Register</a>
+          </li>
+        {% endif %}
+      </ul>
+    </div>
   </div>
 </nav>
